@@ -1,3 +1,10 @@
+2005-01-19  Dan Espen  <dane@mk.telcordia.com>
+
+	* fvwm/bindings.c (ParseBinding): Patch from Frank Gruellich,
+	avoid dump with empty key/mouse binding command.
+	* fvwm/conditional.c (direction_cmd): Safety check after PeekToken
+	Checked all other uses of PeekToken in fvwm dir.
+
 2005-01-08  Olivier Chapuis  <olivier.chapuis@free.fr>
 
 	* fvwm/session.c (matchWin):
